--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "description": "Transpile ES6 modules to AMD and CommonJS with gobble and esperanto",
   "version": "0.1.0",
   "author": "Rich Harris",
+  "license": "MIT",
+  "repository": "https://github.com/gobblejs/gobble-esperanto",
   "keywords": [
     "gobble"
   ],
